--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "url": "https://github.com/tidjungs/react-dropdowns-datepicker/issues"
   },
   "dependencies": {
-    "classnames": "^2.1.2"
+    "classnames": "^2.1.2",
+    "react-bootstrap": "^0.30.5"
   },
   "devDependencies": {
     "babel-eslint": "^4.1.3",
